Cambios de color

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,14 @@
 h1 {
-  color: #cccccc; }
+  color: #170099; }
 
 h2 {
-  color: #999999; }
+  color: #080033; }
 
 h3 {
-  color: #666666; }
+  color: black; }
 
 h4 {
-  color: #333333; }
+  color: black; }
 
 h5 {
   color: black; }
@@ -747,7 +747,7 @@ body {
 /*portatil*/
 @media (max-width: 1280px) {
   .encabezado-de-pagina {
-    background-image: linear-gradient(180deg, #b32929 0%, black 42%, #a44de7 100%);
+    background-image: linear-gradient(180deg, #b32929);
     font-size: 50px;
     height: 120px;
     display: grid;
@@ -788,7 +788,7 @@ body {
       .encabezado-de-pagina .menu-encabezado li:hover .integrantes {
         display: block; }
   .pie-de-pagina {
-    background-image: linear-gradient(180deg, #b32929 0%, black 42%, #a44de7 100%);
+    background-image: linear-gradient(180deg #523469);
     color: snow;
     height: 120px;
     display: grid;
@@ -908,7 +908,7 @@ body {
 /*tablet*/
 @media (max-width: 1024px) {
   .encabezado-de-pagina {
-    background-image: linear-gradient(180deg, #b32929 0%, black 42%, #a44de7 100%);
+    background-image: linear-gradient(180deg, #b32929);
     font-size: 40px;
     height: 120px;
     display: grid;
@@ -949,7 +949,7 @@ body {
       .encabezado-de-pagina .menu-encabezado li:hover .integrantes {
         display: block; }
   .pie-de-pagina {
-    background-image: linear-gradient(180deg, #b32929 0%, black 42%, #a44de7 100%);
+    background-image: linear-gradient(180deg #523469);
     color: snow;
     height: 120px;
     font-size: 25px;
@@ -1075,7 +1075,7 @@ body {
 /*mobile*/
 @media (max-width: 768px) {
   .encabezado-de-pagina {
-    background-image: linear-gradient(180deg, #b32929 0%, black 42%, #a44de7 100%);
+    background-image: linear-gradient(180deg, #b32929);
     font-size: 40px;
     height: 120px;
     display: grid;
@@ -1116,7 +1116,7 @@ body {
       .encabezado-de-pagina .menu-encabezado li:hover .integrantes {
         display: block; }
   .pie-de-pagina {
-    background-image: linear-gradient(180deg, #b32929 0%, black 42%, #a44de7 100%);
+    background-image: linear-gradient(180deg #523469);
     color: snow;
     height: 120px;
     font-size: 20px;
@@ -1259,7 +1259,7 @@ body {
 /*mobile bajo*/
 @media (max-width: 690px) {
   .encabezado-de-pagina {
-    background-image: linear-gradient(180deg, #b32929 0%, black 42%, #a44de7 100%);
+    background-image: linear-gradient(180deg, #b32929);
     font-size: 10px;
     height: 60px;
     display: grid;
@@ -1300,7 +1300,7 @@ body {
       .encabezado-de-pagina .menu-encabezado li:hover .integrantes {
         display: block; }
   .pie-de-pagina {
-    background-image: linear-gradient(180deg, #b32929 0%, black 42%, #a44de7 100%);
+    background-image: linear-gradient(180deg #523469);
     color: snow;
     height: 60px;
     font-size: 10px;
