--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,17 +1,17 @@
 h1 {
-  color: #170099; }
+  color: #e8e7f1; }
 
 h2 {
-  color: #080033; }
+  color: white; }
 
 h3 {
-  color: black; }
+  color: white; }
 
 h4 {
-  color: black; }
+  color: white; }
 
 h5 {
-  color: black; }
+  color: white; }
 
 html {
   font-family: 'Roboto', sans-serif; }
@@ -83,7 +83,7 @@ body {
   font-size: 160%; }
 
 .liSolo--lis {
-  color: blue;
+  color: #ff00d4;
   font-size: 160%; }
 
 .liSolo--little1 {
@@ -91,7 +91,7 @@ body {
   font-size: 160%; }
 
 .liSolo--outlast {
-  color: darkgreen;
+  color: #62e062;
   font-size: 160%; }
 
 /*Animacion*/
